--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
        <h2>2. What is a viewport?</h2>
        <p>
            Det synlige område af en hjemmeside, som varierer alt efter hvilken enhed man benytter sig af.<br>
-           Bestemmer størrelsen på hvor meget man kan se, men ikke størrelsen på hvad der er synligt,<br>
-           når elementerne på en hjemmeside skaleres ned eller op.<br> 
+           Bestemmer størrelsen på hvor meget man kan se, men ikke størrelsen på hvad der er synligt, når elementerne på en hjemmeside skaleres ned eller op.<br> 
            Skrives i et meta tag<br>
        </p>
 
